--- a/React/基础/3-useState/public/global.css
+++ b/React/基础/3-useState/public/global.css
@@ -4,6 +4,16 @@
 	box-sizing: border-box;
 }
 
+.pr-12 {
+	padding-right: 12px;
+}
+.pl-12 {
+	padding-left: 12px;
+}
+.ml-12 {
+	margin-left: 12px;
+}
+
 .border-black {
 	border: 1px solid black;
 }
